@@ -14,6 +14,8 @@
         * [BUGFIX]: SqlExport appends Foreign Key (re)enabling pragma at the end.
         * [BUGFIX]: "Maximized" MDI window state is no longer lost after closing last MDI window.
         * [BUGFIX]: TableModifier is now much smarter about when to recreate triggers and how to do it.
+        * [BUGFIX]: TriggerDialog no longer loses "When" field when editing existing trigger.
+        * [BUGFIX]: Columns of Indexes and Triggers tabs in Table Window don't shring after refresh anymore.
 
 [3.0.3]
         * [ADDED]: Added visual validation indicators to DbDialog, so user is informed why the "Ok" button is disabled at the moment.
